Added settings form, removed json.

--- a/Analog/App.config
+++ b/Analog/App.config
@@ -1,6 +1,48 @@
 <?xml version="1.0"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Analog.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
+    <userSettings>
+        <Analog.Properties.Settings>
+            <setting name="Regex" serializeAs="String">
+                <value>\w+=(\d+)\s+\w+=(\d+)\s+\w+=(\d+)\r\n\w+.:(\d{2}.?)(\d{2,3})\s+(\w+\|?\s?\w+?)\s</value>
+            </setting>
+            <setting name="Update" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Debug" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SerialPort" serializeAs="String">
+                <value>COM1</value>
+            </setting>
+            <setting name="BaudRate" serializeAs="String">
+                <value>9600</value>
+            </setting>
+            <setting name="DataBits" serializeAs="String">
+                <value>8</value>
+            </setting>
+            <setting name="ReadTimeout" serializeAs="String">
+                <value>2000</value>
+            </setting>
+            <setting name="WriteTimeout" serializeAs="String">
+                <value>500</value>
+            </setting>
+            <setting name="DtrEnable" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="RtsEnable" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="SettingTest" serializeAs="String">
+                <value>test123</value>
+            </setting>
+        </Analog.Properties.Settings>
+    </userSettings>
 </configuration>
