--- a/Analog/App.config
+++ b/Analog/App.config
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Analog.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="Analog.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
-    </startup>
+        
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup>
     <userSettings>
         <Analog.Properties.Settings>
             <setting name="Regex" serializeAs="String">
@@ -40,8 +40,11 @@
             <setting name="RtsEnable" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="SettingTest" serializeAs="String">
-                <value>test123</value>
+            <setting name="numericUpDown_High" serializeAs="String">
+                <value>30</value>
+            </setting>
+            <setting name="numericUpDown_Low" serializeAs="String">
+                <value>16</value>
             </setting>
         </Analog.Properties.Settings>
     </userSettings>
