--- a/Analog/Properties/Settings.settings
+++ b/Analog/Properties/Settings.settings
@@ -32,8 +32,11 @@
     <Setting Name="RtsEnable" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="SettingTest" Type="System.String" Scope="User">
-      <Value Profile="(Default)">test123</Value>
+    <Setting Name="numericUpDown_High" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">30</Value>
+    </Setting>
+    <Setting Name="numericUpDown_Low" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">16</Value>
     </Setting>
   </Settings>
 </SettingsFile>
