Now works with Quad systems

--- a/Analog/App.config
+++ b/Analog/App.config
@@ -11,16 +11,16 @@
     <userSettings>
         <Analog.Properties.Settings>
             <setting name="Regex" serializeAs="String">
-                <value>\w+=(\d+)\s+\w+=(\d+)\s+\w+=(\d+)\r\n\w+.:(\d{2}.?)(\d{2,3})\s+(\w+\|?\s?\w+?)\s</value>
+                <value>(\w{11}=|\w{16}:.)(\d{2})\s+(\w{9}=(\d{2})\s+\w{5}=(\d{2})|\w{7}).*?(\n|\r\n)\w+.:(\d{2}.?)(\d{2,3})\s+(\w+\|?\s?\w+?)\s</value>
             </setting>
             <setting name="Update" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="Debug" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="SerialPort" serializeAs="String">
-                <value>COM1</value>
+                <value>COM3</value>
             </setting>
             <setting name="BaudRate" serializeAs="String">
                 <value>9600</value>
