--- a/Analog/Analog.csproj
+++ b/Analog/Analog.csproj
@@ -64,7 +64,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\Debug.cs" />
+    <Compile Include="Classes\Testing.cs" />
     <Compile Include="Classes\To.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
