--- a/Analog/App.config
+++ b/Analog/App.config
@@ -13,7 +13,7 @@
             <setting name="Regex" serializeAs="String">
                 <value>(\w{11}=|\w{16}:.)(\d{2})\s+(\w{9}=(\d{2})\s+\w{5}=(\d{2})|\w{7}).*?(\n|\r\n)\w+.:(\d{2}.?)(\d{2,3})\s+(\w+\|?\s?\w+?)\s</value>
             </setting>
-            <setting name="Update" serializeAs="String">
+            <setting name="AutoUpdate" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="Debug" serializeAs="String">
@@ -40,10 +40,10 @@
             <setting name="RtsEnable" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="numericUpDown_High" serializeAs="String">
+            <setting name="NumericUpDown_High" serializeAs="String">
                 <value>30</value>
             </setting>
-            <setting name="numericUpDown_Low" serializeAs="String">
+            <setting name="NumericUpDown_Low" serializeAs="String">
                 <value>16</value>
             </setting>
         </Analog.Properties.Settings>
