changed settings/aboutbox to showdialog

--- a/Analog/App.config
+++ b/Analog/App.config
@@ -46,6 +46,9 @@
             <setting name="NumericUpDown_Low" serializeAs="String">
                 <value>16</value>
             </setting>
+            <setting name="Restart" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Analog.Properties.Settings>
     </userSettings>
 </configuration>
