--- a/Analog/Properties/Settings.settings
+++ b/Analog/Properties/Settings.settings
@@ -38,5 +38,8 @@
     <Setting Name="NumericUpDown_Low" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">16</Value>
     </Setting>
+    <Setting Name="Restart" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
